Change classes on create,edit and read