@@ -1,58 +1,48 @@
 package by.kozlov.spring.service;
 
-import by.kozlov.spring.dto.CreateProductionDto;
-import by.kozlov.spring.dto.UpdateProductionDto;
+import by.kozlov.spring.dto.*;
 import by.kozlov.spring.database.entity.Production;
-import by.kozlov.spring.mapper.CreateProductionMapper;
-import by.kozlov.spring.mapper.ProductionMapper;
-import by.kozlov.spring.mapper.UpdateProductionMapper;
+import by.kozlov.spring.mapper.*;
 import by.kozlov.spring.database.repository.ProductionRepository;
+import jakarta.persistence.Id;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validation;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import by.kozlov.spring.dto.ProductionDto;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ProductionService {
     private final ProductionRepository productionRepository;
-    private final ProductionMapper productionMapper;
-    private final CreateProductionMapper createProductionMapper;
-    private final UpdateProductionMapper updateProductionMapper;
+    private final ProductionReadMapper productionReadMapper;
+    private final ProductionCreateEditMapper productionCreateEditMapper;
 
-    @Autowired
-    public ProductionService(ProductionRepository productionRepository,
-                             ProductionMapper productionMapper,
-                             CreateProductionMapper createProductionMapper,
-                             UpdateProductionMapper updateProductionMapper) {
-        this.productionRepository = productionRepository;
-        this.productionMapper = productionMapper;
-        this.createProductionMapper = createProductionMapper;
-        this.updateProductionMapper = updateProductionMapper;
-    }
-
-    public List<ProductionDto> findAllByWorkerId(Integer id, Sort sort) {
+    public List<ProductionReadDto> findAllByWorkerId(Integer id, Sort sort) {
         return productionRepository.findAllByWorkerId(id,sort).stream()
-                    .map(productionMapper::mapFrom).collect(Collectors.toList());
+                    .map(productionReadMapper::map).toList();
     }
 
-    public List<ProductionDto> findAll(Pageable page) {
+    public List<ProductionReadDto> findAll(Pageable page) {
         return productionRepository.findAll(page).stream()
-                    .map(productionMapper::mapFrom).collect(Collectors.toList());
+                    .map(productionReadMapper::map).toList();
     }
 
-    public Optional<ProductionDto> findById(Integer id) {
+    public Optional<ProductionReadDto> findById(Integer id) {
         return productionRepository.findById(id)
-                    .map(productionMapper::mapFrom);
+                    .map(productionReadMapper::map);
     }
 
-    public Integer create(CreateProductionDto productionDto) {
+    @Transactional
+    public ProductionReadDto create(ProductionCreateEditDto productionDto) {
 
         try (var validationFactory = Validation.buildDefaultValidatorFactory()) {
 
@@ -61,32 +51,36 @@ public class ProductionService {
             if (!validationResult.isEmpty()) {
                 throw new ConstraintViolationException(validationResult);
             }
-            var productionEntity = createProductionMapper.mapFrom(productionDto);
-            productionEntity = productionRepository.saveAndFlush(productionEntity);
-            return productionEntity.getId();
+            return Optional.of(productionDto)
+                    .map(productionCreateEditMapper::map)
+                    .map(productionRepository::save)
+                    .map(productionReadMapper::map)
+                    .orElseThrow();
         }
     }
 
     public boolean delete(Integer id) {
-
-        Optional<Production> maybe;
-        maybe = productionRepository.findById(id);
-        maybe.ifPresent(it -> productionRepository.delete(maybe.orElseThrow()));
-        return maybe.isPresent();
+        return productionRepository.findById(id)
+                .map(entity -> {
+                    productionRepository.delete(entity);
+                    productionRepository.flush();
+                    return true;
+                }).orElse(false);
     }
 
 
-    public void update(UpdateProductionDto productionDto) {
+    public Optional<ProductionReadDto> update(Integer id, ProductionCreateEditDto productionDto) {
 
         try (var validationFactory = Validation.buildDefaultValidatorFactory()) {
-
             var validator = validationFactory.getValidator();
             var validationResult = validator.validate(productionDto);
             if (!validationResult.isEmpty()) {
                 throw new ConstraintViolationException(validationResult);
             }
-            var productionEntity = updateProductionMapper.mapFrom(productionDto);
-            productionRepository.saveAndFlush(productionEntity);
+            return productionRepository.findById(id)
+                    .map(entity -> productionCreateEditMapper.map(productionDto,entity))
+                    .map(productionRepository::saveAndFlush)
+                    .map(productionReadMapper::map);
         }
     }
 
